# rbc_statement_parser

./: .gitignore  README.md  main.py  pyproject.toml
parsers/: common.py  expense.py  my_main_money.py  nsf.py  visa_avion_unlimited.py
